<resources>
    <string name="app_name">Taskify</string>
    <string name="tv_email">Correo Electronico</string>
    <string name="hint_username">correo electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btn_login">Inicie Sesión</string>
    <string name="btn_register">Registrese</string>
    <string name="et_password">constraseña</string>
    <string name="et_password2">confirmar constraseña</string>
    <string name="tv_registro">Registro</string>
    <string name="tv_appTitle">Taskify</string>
    <string name="tv_createTask">Crear tarea...</string>
    <string name="et_titulo">Titulo</string>
    <string name="et_desciption">Descripción</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_borrar">Borrar</string>
    <string name="tv_categoria">Categoria:</string>
    <string name="tv_fecha1">Fecha de Inicio</string>
    <string name="tv_fecha2">Fecha de finalización</string>
    <string name="tv_editar_tarea">Editar Tarea...</string>
    <string name="date1">Seleccionar fecha de inicio</string>
    <string name="date2">Seleccionar fecha de final</string>

    <string-array name="spinner_options">
        <item>Estudio</item>
        <item>Trabajo</item>
        <item>Personal</item>
    </string-array>

</resources>