<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_registro"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="210dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_icon" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_username"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/et_password"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="262dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:hint="@string/et_password2"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password1" />

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/et_password2"
        app:layout_constraintTop_toBottomOf="@+id/et_password1"
        app:srcCompat="@drawable/eye_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password2" />



</androidx.constraintlayout.widget.ConstraintLayout>