<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_task">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_editar_tarea"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_et_titulo"
        android:layout_width="255dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:hint="@string/et_titulo"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_et_descipcion"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:hint="@string/et_desciption"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_et_titulo" />

    <Spinner
        android:id="@+id/et_spinner_categoria"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/spinner_options"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_et_descipcion" />

    <EditText
        android:id="@+id/et_et_fecha_inicio"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/date1"
        android:focusable="false"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_spinner_categoria" />

    <EditText
        android:id="@+id/et_et_fecha_fin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@android:drawable/editbox_background"
        android:focusable="false"
        android:hint="@string/date2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_et_fecha_inicio" />

    <Button
        android:id="@+id/btn_et_guardar"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>